# voidstrike

./: .env.example  .eslintrc.cjs  .gitignore  .prettierignore  AGENTS.md  CONTRIBUTING.md  DEPLOYMENT.md  LICENSE  README.md  contested_frontier_blueprint.json  eslint.config.mjs  next.config.js  package-lock.json  package.json  progress.md  tailwind.config.ts  tsconfig.test.json  vitest.config.ts  void_assault_blueprint.json
.claude/: AI_ANALYSIS.md  ARCHITECTURE.md  AUDIO.md  AUDIO_ASSETS.md  AUDIO_PROMPTS.md  CLAUDE.md  DESIGN.md  GRAPHICS.md  MODELS.md  P2P_ARCHITECTURE.md  ROADMAP_SC2_PARITY.md  SCHEMA.md  TEXTURES.md  TODO.md
.github/: codeflow-card.json  optimized-models.txt
.playwright-cli/: page-2026-03-15T11-56-26-879Z.yml  page-2026-03-15T11-56-53-265Z.yml  page-2026-03-15T11-58-55-007Z.yml  page-2026-03-15T11-59-14-934Z.yml  page-2026-03-15T12-00-05-955Z.yml  page-2026-03-15T12-01-33-919Z.yml  page-2026-03-15T12-02-11-043Z.yml  page-2026-03-15T12-02-16-965Z.yml  page-2026-03-15T12-05-24-610Z.yml  page-2026-03-15T12-05-37-001Z.yml  page-2026-03-15T12-05-55-378Z.yml  page-2026-03-15T12-06-16-151Z.yml  page-2026-03-15T13-46-13-829Z.yml  page-2026-03-15T13-46-24-387Z.yml  page-2026-03-15T13-46-36-361Z.yml  page-2026-03-15T13-46-55-506Z.yml  page-2026-03-15T13-47-29-429Z.yml  page-2026-03-15T13-48-00-195Z.yml  page-2026-03-15T13-48-18-902Z.yml  page-2026-03-15T13-48-37-430Z.yml
docs/: PERFORMANCE_ANALYSIS.md  README.md  TESTING.md  blender_auto_retopo.py  extract_meshy_zips.py  (+2 more)
wasm/boids/: Cargo.toml
wasm/boids/src/: lib.rs  simd.rs  soa.rs
(+885 files in other folders)
